# auto-price-converter-backend

./: .env.example  .gitignore  .railwayignore  AGENTS.md  CHANGELOG.md  README.md  nixpacks.toml  pyproject.toml  railway.toml  release-please-config.json
.github/workflows/: release-please.yml  sync-rates.yml
app/: main.py
app/core/: config.py  database.py  dependencies.py  deps.py  logging.py  scheduler.py
app/models/: __init__.py  rates.py  responses.py  symbols.py
app/repositories/: rates.py  symbols.py
app/routers/: health.py  jobs.py  rates.py  symbols.py
app/services/: normalization.py  providers.py  rates_sync.py
app/utils/: caching.py
docs/: RAILWAY_DEPLOYMENT.md
sql/: schema.sql
supabase/: config.toml
supabase/functions/sync-prices/: index.ts
supabase/migrations/: 20260203095227_create_rates_tables.sql  20260203120000_add_latest_rates_view.sql  20260203123000_add_symbols_tables.sql  20260204074705_add_rls_policies.sql
tests/: conftest.py
tests/integration/: test_health.py  test_jobs.py  test_rates.py  test_symbols.py
tests/unit/core/: test_config.py  test_dependencies.py
tests/unit/repositories/: test_rates_repo.py  test_symbols_repo.py
tests/unit/services/: test_normalization.py  test_providers.py  test_rates_sync.py
tests/unit/utils/: test_caching.py
