[project]
name = "auto-price-converter-backend"
version = "0.1.1"
description = "Auto Price Converter Rates API"
requires-python = ">=3.9"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "supabase>=2.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.14.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "respx>=0.22.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
# Set the target Python version
target-version = "py313"

# Line length to match common Python standards
line-length = 100

# Exclude common directories
exclude = [
    ".venv",
    "venv",
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".eggs",
    "*.egg-info",
]

[tool.ruff.lint]
# Enable these rule sets:
# E/W - pycodestyle errors and warnings
# F - pyflakes
# I - isort (import sorting)
# N - pep8-naming
# UP - pyupgrade (modern Python syntax)
# B - flake8-bugbear (common bugs)
# C4 - flake8-comprehensions
# SIM - flake8-simplify
# RUF - Ruff-specific rules
select = ["E", "W", "F", "I", "N", "UP", "B", "C4", "SIM", "RUF"]

# Allow unused variables when underscore-prefixed
ignore = []

# Allow fix for all enabled rules (when `--fix` is provided)
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
# Group imports into sections
known-first-party = ["app"]

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"

# Indent with spaces
indent-style = "space"

# Respect magic trailing commas
skip-magic-trailing-comma = false

# Auto-detect line endings
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-v --tb=short"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
]

[tool.coverage.run]
source = ["app"]
branch = true
omit = ["app/main.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
fail_under = 80
show_missing = true
